--- a/.gitignore
+++ b/.gitignore
@@ -160,4 +160,14 @@ typings/
 !.vscode/launch.json
 !.vscode/extensions.json
 
+### NetBeans ###
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
 # End of https://www.gitignore.io/api/node,symfony
