--- a/.gitignore
+++ b/.gitignore
@@ -153,12 +153,17 @@ typings/
 /web/css/
 /web/js/
 
-### Code ###
+
+### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
 
 ### NetBeans ###
 **/nbproject/private/
@@ -169,5 +174,31 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
 
 # End of https://www.gitignore.io/api/node,symfony
