--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,21 @@
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
+        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/maker-bundle": "^1.13",
         "symfony/monolog-bundle": "^3.4",
         "symfony/orm-pack": "^1.0",
+        "symfony/proxy-manager-bridge": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/web-profiler-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.2",
-        "symfony/debug-pack": "^1.0"
+        "doctrine/doctrine-fixtures-bundle": "^3.2"
     },
     "config": {
         "preferred-install": {
