--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,10 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
 .env.test
+.env.local
+.env.*.local
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -82,6 +84,7 @@ typings/
 
 # react / gatsby 
 #public/
+/public/bundles/
 
 # vuepress build output
 .vuepress/dist
@@ -108,6 +111,7 @@ typings/
 # Cache, session files and logs (Symfony3)
 /var/cache/*
 /var/logs/*
+/var/
 /var/sessions/*
 !var/cache/.gitkeep
 !var/logs/.gitkeep
