--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/asset": "4.3.*",
+        "symfony/cache": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.3.*",
