--- a/.gitignore
+++ b/.gitignore
@@ -111,7 +111,7 @@ typings/
 # Cache, session files and logs (Symfony3)
 /var/cache/*
 /var/logs/*
-/var/
+/var/*
 /var/sessions/*
 !var/cache/.gitkeep
 !var/logs/.gitkeep
