--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/asset": "4.3.*",
         "symfony/cache": "4.3.*",
@@ -12,6 +13,7 @@
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
         "symfony/maker-bundle": "^1.13",
         "symfony/monolog-bundle": "^3.4",
@@ -23,7 +25,6 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.2"
     },
     "config": {
         "preferred-install": {
