--- a/.env
+++ b/.env
@@ -28,3 +28,10 @@ DATABASE_URL=mysql://root:lesi1234@127.0.0.1:3306/symf4db
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 #DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
