--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,16 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.8",
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "sensio/framework-extra-bundle": "^5.4",
+        "sensiolabs/security-checker": "^6.0",
         "symfony/asset": "4.3.*",
         "symfony/cache": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.3.*",
+        "symfony/expression-language": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
@@ -20,11 +23,17 @@
         "symfony/orm-pack": "^1.0",
         "symfony/proxy-manager-bridge": "4.3.*",
         "symfony/security-bundle": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.3",
         "symfony/twig-bundle": "4.3.*",
+        "symfony/validator": "4.3.*",
         "symfony/web-profiler-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/browser-kit": "4.3.*",
+        "symfony/css-selector": "4.3.*",
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
