--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,39 @@
 security:
+    encoders:
+        App\Entity\SecurityUser:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\SecurityUser
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+
+            # form_login: 
+            #     login_path: login
+            #     check_path: login
+            #     username_parameter: 'email'
+            #     password_parameter: 'password'   
+            #     csrf_token_generator: security.csrf.token_manager             
+            
+            # logout:
+            #     path: /logout #page to logout
+            #     target: /login #redirecting page
+
+            # remember_me:
+            #     secret: '%kernel.secret%'
+            #     lifetime: 604800 #1 week in seconds
+            #     #always_remember_me: true #always remember login (not checkbox req)
+            #     path: / #applies for entire web site
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -18,5 +44,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
