--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=2a82a279edd5e22e6e39e38afe2ce83f
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:lesi1234@127.0.0.1:3306/symf4db
+DATABASE_URL=mysql://root:lesi1234@127.0.0.1:3306/symf4db-test
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 #DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 ###< doctrine/doctrine-bundle ###
