--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/proxy-manager-bridge": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/swiftmailer-bundle": "^3.3",
+        "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/web-profiler-bundle": "4.3.*",
